# wildberriesownsdk

./: LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
src/wbapi/api/: base.py  connect.py  introspect.py  marketplace.py
src/wbapi/common/: utils.py
src/wildberriesownsdk/api/: __init__.py  base.py  config.py  connect.py  content.py  enums.py  introspect.py  marketplace.py  prices_and_discounts.py  services.py
src/wildberriesownsdk/common/: __init__.py  config.py  decorators.py  exceptions.py  http.py  services.py  settings.py  utils.py
wbapi/api/: base.py  connect.py  enums.py  introspect.py  marketplace.py  services.py
wbapi/common/: config.py
