[build-system]
requires=["setuptools>=66.0"]
build-backend="setuptools.build_meta"

[tool.setuptools]
include-package-data=true

[tool.setuptools.packages.find]
where=["src"]

[project]
name="wildberriesownsdk"
version="0.1"
readme="README.md"
authors=[
    {name="Aleksey Stepanov", email="stpnvlks@gmail.com"},
]
description="Wildberries API SDK. (not official)"
requires-python=">=3.8"
classifiers=[
    "Programming Language :: Python :: 3.8",
]
dependencies=[
    'exceptiongroup>=1.1.3; python_version<"3.11"',
]

